--- a/css/globals.css
+++ b/css/globals.css
@@ -6,7 +6,7 @@
 
 
 .screen a {
-  display: contents;
+  display: inline-block;
   text-decoration: none;
 }
 
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  pointer-events: none;
+  pointer-events: auto;
   width: 100%;
 }
 
